test/corpus/datatypes.txt
==================
Test data types
==================

block {
    key: value
	# parse url with paramaters
    url: https://example.com:8080/?username=Himalian
    complex_url: https://subscribe.example.com/api/v1/client/subscribe?token=mytoken
    number: 123
    time: 15h
    boolean: true
    string: "hello world"
    object: {
        key1: value1
        key2: value2
    }
}

---

(source_file
  (block
    name: (identifier)
    (key_value
      key: (identifier)
      value: (identifier))
	(comment)
    (key_value
      key: (identifier)
      value: (url))
    (key_value
      key: (identifier)
      value: (url))
    (key_value
      key: (identifier)
      value: (numbers))
    (key_value
      key: (identifier)
      value: (time))
    (key_value
      key: (identifier)
      value: (boolean))
    (key_value
      key: (identifier)
      value: (string))
    (block
      name: (identifier)
      (ERROR)
      (key_value
        key: (identifier)
        value: (identifier))
      (key_value
        key: (identifier)
        value: (identifier)))))
